@@ -1,3 +1,12 @@
+2007-12-05  Dan Winship  <danw@gnome.org>
+
+	* configure.in: bump version to 2.3.0 and SOUP_API_VERSION to 2.4,
+	and drop AGE/CURRENT/REVISION all to 0.
+
+	* libsoup/Makefile.am: Rename library to libsoup-2.4.la
+
+	(start of libsoup-2.4 branch)
+
 2007-11-26  Dan Winship  <danw@gnome.org>
 
 	* configure.in: 2.2.104
